-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.7.0-beta1
-
5e66f834e3a0ded8f6124f7b04aedbaf846cabd6
Apparently the hook to recreate them isn't called in this case.
| For Gerrit Dashboard: QTCREATORBUG-20506 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 230792,2 | QmlProfiler: Keep text marks when replaying events | 4.7 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |